# whynot

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  config.example.toml  devenv.nix  test_styled_text_cli.toml
.github/workflows/: test.yaml
examples/: client_demo.rs
examples/notmuch/: search-example-1.md  search-example-2-attachments.md  (+1 more)
src/: body.rs  common.rs  config.rs  error.rs  lib.rs  search.rs  thread.rs
tests/: attachment_download_tests.rs  attachment_tests.rs  auto_refresh_tests.rs  baseline_visual_assessment.rs  client_integration_tests.rs  content_extraction_tests.rs  css_rendering_issues_tests.rs  ctrl_m_terminal_compatibility_tests.rs  ctrl_m_verification_report.rs  email_gallery_tests.rs  html_rendering_tests.rs  html_snapshot_tests.rs.disabled  html_snapshot_tests_simple.rs  iframe_sandboxing_tests.rs  image_toggle_tests.rs  integration_tests.rs  interactive_ctrl_m_test.rs  link_redirect_tests.rs  mail_sender_tests.rs  multipart_structure_tests.rs  pagination_tests.rs  post_improvement_assessment.rs  remote_client_tests.rs  styled_text_integration_test.rs  text_renderer_integration_tests.rs  theme_visual_tests.rs  threading_integration_tests.rs  tui_app_markdown_tests.rs  tui_compose_basic_tests.rs  tui_compose_mode_indicator_tests.rs  tui_compose_multiline_tests.rs  tui_html_conversion_tests.rs  tui_markdown_compose_tests.rs  tui_markdown_config_tests.rs  tui_markdown_keybinding_tests.rs  tui_markdown_send_tests.rs  tui_search_tests.rs  visual_diff_tests.rs.disabled  visual_diff_tests_simple.rs  visual_regression_tests.rs.disabled  (+2 more)
(+42 files in other folders)
