[package]
name = "whynot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "notmuch-client"
path = "src/bin/notmuch-client.rs"

[[bin]]
name = "whynot-web"
path = "src/bin/whynot-web.rs"

[[bin]]
name = "test-gallery-server"
path = "src/bin/test-gallery-server.rs"


[features]
test-utils = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
tempfile = "3.14"
chrono = "0.4"
mail-builder = "0.3"
mail-parser = "0.9"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Web dependencies
axum = { version = "0.7", features = ["macros"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ammonia = "4.0"
mime = "0.3"
html-escape = "0.2"
maplit = "1.0"
base64 = "0.22"
reqwest = { version = "0.11", features = ["cookies", "json"] }
regex = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["cookies", "json"] }
regex = "1.0"
scraper = "0.20"
whynot = { path = ".", features = ["test-utils"] }
headless_chrome = "1.0"
insta = { version = "1.34", features = ["filters"] }
image = "0.24"
tokio-test = "0.4"
